--- a/testons/gwt/src/main/webapp/index.html
+++ b/testons/gwt/src/main/webapp/index.html
@@ -30,7 +30,10 @@
     <link rel="stylesheet" href="main/js/onsen-2.0.0-rc.14/css/onsen-css-components-blue-basic-theme.css">
     <script src="main/js/onsen/js/angular/angular.js"></script>
     <script src="main/js/onsen-2.0.0-rc.14/js/onsenui.js"></script>
+    <!-- 
     <script src="main/js/onsen-2.0.0-rc.14/js/angular-onsenui.js"></script>
+     -->
+    <script src="main/js/onsen-2.0.0-rc.14/js/angular-onsenui-debug.js"></script>
     
     <script type="text/javascript" src="main/js/onsenui-extension.js"></script>
     <link rel="stylesheet" href="main/css/onsenui-extension.css">
