--- a/testons/gwt/src/main/webapp/index.html
+++ b/testons/gwt/src/main/webapp/index.html
@@ -28,7 +28,7 @@
      
     <link rel="stylesheet" href="main/js/onsen-2.0.0-rc.14/css/onsenui.css">
     <link rel="stylesheet" href="main/js/onsen-2.0.0-rc.14/css/onsen-css-components-blue-basic-theme.css">
-    <script src="main/js/onsen/js/angular/angular.js"></script>
+    <script src="main/js/onsen-2.0.0-rc.14/js/angular/angular.js"></script>
     <script src="main/js/onsen-2.0.0-rc.14/js/onsenui.js"></script>
     <!-- 
     <script src="main/js/onsen-2.0.0-rc.14/js/angular-onsenui.js"></script>
